Landing page render, fix overflow

--- a/app/assets/stylesheets/base/10-landing.css
+++ b/app/assets/stylesheets/base/10-landing.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vw;
+  height: calc(100vh - 80px);
 }
 
 .splash-page-pin-index {
